--- a/044-Dapr/Student/Resources/Simulation/Simulation.csproj
+++ b/044-Dapr/Student/Resources/Simulation/Simulation.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.38.0" />
+  </ItemGroup>
+
 </Project>
