--- a/045-LotsOfAuth/Student/Resources/func-hrSystemProxy/func-hrSystemProxy.csproj
+++ b/045-LotsOfAuth/Student/Resources/func-hrSystemProxy/func-hrSystemProxy.csproj
@@ -5,7 +5,9 @@
     <RootNamespace>func_hrSystemProxy</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
