--- a/045-LotsOfAuth/Student/Resources/app-financial/appsettings.Development.json
+++ b/045-LotsOfAuth/Student/Resources/app-financial/appsettings.Development.json
@@ -3,7 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient": "Trace"
     }
-  }
+  },
+  "FINANCIAL_CERTIFICATE_THUMBPRINT": "A866AE41FA18EF00484BC648D34FB96617A70E82Exp"
 }
