--- a/.github/workflows/checklinks_config.json
+++ b/.github/workflows/checklinks_config.json
@@ -2,6 +2,6 @@
   "ignorePatterns": [
     { "pattern": "^http://----001IntroToAKS-links-----" },
     { "pattern": "^http://content-api:3001" },
-    { "pattern": "^http://localhost" }   
+    { "pattern": "^http://localhost:3001" }   
   ]
 }
