--- a/.github/workflows/checkTemplate.yml
+++ b/.github/workflows/checkTemplate.yml
@@ -8,8 +8,25 @@ on:
       - '047-Dapr/**'
   
 jobs:
-  checklinks:
+  generateInputPaths:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Print output
+        run: |
+          ls -l | grep '^d' | awk -F ' ' '{print $9}' | grep -Po '\d{3}.*' | jq -R -s -c 'split("\n") | map(select(length > 0)))'
+      - name: Generate matrix with all modules of WhatTheHack repository.
+        id: set-matrix
+        run: |
+          echo "::set-output name=matrix::$(ls -l | grep '^d' | awk -F ' ' '{print $9}' | grep -Po '\d{3}.*' | jq -R -s -c 'split("\n") | map(select(length > 0)))'"
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+  checklinks:
+    needs: generateInputPaths
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        inputPath: ${{ fromJson(needs.generateInputPaths.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2
       - name: Print Directory Structure
@@ -18,4 +35,4 @@ jobs:
       - name: Template Format Check
         uses: jordanbean-msft/github-action-wth-template-check@v0.1.0
         with:
-          inputPath: ${{ github.workspace }}/047-Dapr
+          inputPath: ${{ github.workspace }}/${{ matrix.inputPath }}
