--- a/.github/workflows/checkTemplate.yml
+++ b/.github/workflows/checkTemplate.yml
@@ -7,25 +7,28 @@ on:
       - '.github/workflows/checkTemplate.yml'
       - '047-Dapr/**'
   
+# jobs:
+#   generateInputPaths:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Generate matrix with all modules of WhatTheHack repository
+#         id: set-matrix
+#         run: |
+#           echo "::set-output name=matrix::$(ls -l | grep '^d' | awk -F ' ' '{print $9}' | grep -Po '\d{3}.*' | jq -R -s -c 'split("\n") | map(select(length > 0))')"
+#     outputs:
+#       matrix: ${{ steps.set-matrix.outputs.matrix }}
+#       cache: ${{ steps.set-cache.outputs.cache-hit }}
+#   checklinks:
+#     needs: generateInputPaths
+#     runs-on: ubuntu-latest
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         inputPath: ${{ fromJson(needs.generateInputPaths.outputs.matrix) }}
 jobs:
-  generateInputPaths:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Generate matrix with all modules of WhatTheHack repository
-        id: set-matrix
-        run: |
-          echo "::set-output name=matrix::$(ls -l | grep '^d' | awk -F ' ' '{print $9}' | grep -Po '\d{3}.*' | jq -R -s -c 'split("\n") | map(select(length > 0))')"
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      cache: ${{ steps.set-cache.outputs.cache-hit }}
   checklinks:
-    needs: generateInputPaths
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        inputPath: ${{ fromJson(needs.generateInputPaths.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2
       - name: Print Directory Structure
@@ -34,4 +37,5 @@ jobs:
       - name: Template Format Check
         uses: jordanbean-msft/github-action-wth-template-check@v0.2.0
         with:
-          inputPath: ${{ github.workspace }}/${{ matrix.inputPath }}
+          #inputPath: ${{ github.workspace }}/${{ matrix.inputPath }}
+          inputPath: ${{ github.workspace }}/047-Dapr
