--- a/.github/workflows/checkTemplate.yml
+++ b/.github/workflows/checkTemplate.yml
@@ -38,4 +38,5 @@ jobs:
         uses: jordanbean-msft/github-action-wth-template-check@v0.2.2
         with:
           #inputPath: ${{ github.workspace }}/${{ matrix.inputPath }}
-          inputPath: ${{ github.workspace }}/047-Dapr
+          path: ${{ github.workspace }}
+          shouldScanSubdirectories: true
