--- a/.github/workflows/checkTemplate.yml
+++ b/.github/workflows/checkTemplate.yml
@@ -40,3 +40,4 @@ jobs:
           #inputPath: ${{ github.workspace }}/${{ matrix.inputPath }}
           path: ${{ github.workspace }}
           shouldScanSubdirectories: true
+          pathToExcludePathsToNotFailOnConfigFile: .github/workflows/.excludePathsToNotFailOnConfigFile.txt
